--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				image-rendering: -webkit-crisp-edges;
 				image-rendering: pixelated;
 				image-rendering: crisp-edges;
+				cursor: none;
 			}
 		</style>
 	</head>
