--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-		<title>My awesome Rust, WebAssembly, and Webpack application</title>
+		<title>The personal website of Daniel Lewis</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
 		/>
 		<style>
-			body {
+			body,
+			#app {
 				width: 100vw;
 				height: 100vh;
 				display: flex;
@@ -25,6 +26,6 @@
 		</style>
 	</head>
 	<body>
-		<canvas id="canvas"></canvas>
+		<div id="app"></div>
 	</body>
 </html>
