--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<meta
+			name="viewport"
+			content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+		/>
 		<title>The personal website of Daniel Lewis</title>
 		<link
 			rel="stylesheet"
